--- a/index.html
+++ b/index.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Burst</title>
+    <!-- Link to Tailwind and daisy ui -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.2/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Link to google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Lato', sans-serif;
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <header class="container mx-auto">
+
+        <nav
+            class="flex items-center lg:justify-between justify-around lg:py-9 lg:px-12 lg:bg-[#F85559] my-12 rounded-full">
+            <!-- Navigation Links Starts-->
+
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal flex items-center gap-7 text-[#FFF] text-lg font-medium">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">All Fruits</a></li>
+                </ul>
+            </div>
+
+            <!-- Navigation Links Ends-->
+
+            <!-- Logo and title Starts-->
+            <div class="flex text-4xl font-bold items-center gap-4">
+                <img src="images/logo.png" alt="logo">
+                <h3 class="lg:text-[#FFF]">Fruit Burst</h3>
+            </div>
+            <!-- Logo and title Ends-->
+
+            <!-- Search Here Starts -->
+            <div class="md:flex items-center justify-between input input-bordered rounded-full lg:w-96 hidden">
+                <input type="text" placeholder="Search Here" />
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                    </svg>
+                </button>
+            </div>
+            <!-- Search Here Ends -->
+
+            <!--Responsive Navigation links Starts-->
+            <div class="dropdown lg:hidden">
+                <label tabindex="0" class="btn btn-ghost lg:hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                    </svg>
+
+                </label>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-10 z-[1] p-2 shadow bg-base-100 rounded-box">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">All Fruits</a></li>
+                </ul>
+            </div>
+            <!--Responsive Navigation links Ends-->
+
+        </nav>
+
+        <div class="carousel w-full rounded-lg">
+
+            <div id="slide1" class="carousel-item relative w-full">
+
+                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 w-full mx-auto">
+                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
+                        doorstep</h3>
+                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
+                        organic products</p>
+                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                </div>
+
+                <img src="images/banner1.png" class="w-full" />
+
+
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+
+            <div id="slide2" class="carousel-item relative w-full">
+
+                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 container mx-auto">
+                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
+                        doorstep</h3>
+                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
+                        organic products</p>
+                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                </div>
+
+                <img src="images/banner2.png" class="w-full" />
+
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+
+            <div id="slide3" class="carousel-item relative w-full">
+
+                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 container mx-auto">
+                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
+                        doorstep</h3>
+                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
+                        organic products</p>
+                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                </div>
+
+                <img src="images/banner3.png" class="w-full" />
+
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+
+            <div id="slide4" class="carousel-item relative w-full">
+
+                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 container mx-auto">
+                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
+                        doorstep</h3>
+                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
+                        organic products</p>
+                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                </div>
+
+                <img src="images/banner4.png" class="w-full" />
+
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
