--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <!-- Custom Styles -->
     <style>
         * {
             font-family: 'Lato', sans-serif;
+        }
+
+        .slider-color {
+            background: linear-gradient(180deg, #121212 -14.42%, rgba(18, 18, 18, 0.00) 100%);
         }
     </style>
 </head>
@@ -24,6 +30,7 @@
 
     <header class="container mx-auto">
 
+        <!-- Navigation Bar Starts -->
         <nav
             class="flex items-center lg:justify-between justify-around lg:py-9 lg:px-12 lg:bg-[#F85559] my-12 rounded-full">
             <!-- Navigation Links Starts-->
@@ -79,21 +86,30 @@
             <!--Responsive Navigation links Ends-->
 
         </nav>
+        <!-- Navigation Bar Ends -->
 
+
+        <!-- Carousel / Slider Part Starts-->
         <div class="carousel w-full rounded-lg">
 
+            <!-- Slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
 
-                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 w-full mx-auto">
-                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
-                        doorstep</h3>
-                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
-                        organic products</p>
-                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner1.png');">
+                    <div class="hero-overlay slider-color"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                            <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
+                                your
+                                <br>
+                                doorstep</h3>
+                            <p class="text-[#FFF] md:text-xl lg:font-medium text-lg font-normal">We supply highly
+                                quality
+                                organic products</p>
+                            <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                        </div>
+                    </div>
                 </div>
-
-                <img src="images/banner1.png" class="w-full" />
-
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a>
@@ -102,17 +118,24 @@
             </div>
 
 
+            <!-- Slide - 2 -->
             <div id="slide2" class="carousel-item relative w-full">
 
-                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 container mx-auto">
-                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
-                        doorstep</h3>
-                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
-                        organic products</p>
-                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner2.png');">
+                    <div class="hero-overlay slider-color"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                            <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
+                                your
+                                <br>
+                                doorstep</h3>
+                            <p class="text-[#FFF] md:text-xl lg:font-medium text-lg font-normal">We supply highly
+                                quality
+                                organic products</p>
+                            <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                        </div>
+                    </div>
                 </div>
-
-                <img src="images/banner2.png" class="w-full" />
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a>
@@ -121,17 +144,24 @@
             </div>
 
 
+            <!-- Slide - 3 -->
             <div id="slide3" class="carousel-item relative w-full">
 
-                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 container mx-auto">
-                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
-                        doorstep</h3>
-                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
-                        organic products</p>
-                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner3.png');">
+                    <div class="hero-overlay slider-color"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                            <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
+                                your
+                                <br>
+                                doorstep</h3>
+                            <p class="text-[#FFF] md:text-xl lg:font-medium text-lg font-normal">We supply highly
+                                quality
+                                organic products</p>
+                            <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                        </div>
+                    </div>
                 </div>
-
-                <img src="images/banner3.png" class="w-full" />
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a>
@@ -140,26 +170,34 @@
             </div>
 
 
+            <!-- Slide - 4 -->
             <div id="slide4" class="carousel-item relative w-full">
 
-                <div class="absolute text-center lg:space-y-5 md:space-y-3 md:top-20 top-5 container mx-auto">
-                    <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-2xl md:text-6xl">Exotic tastes at your <br>
-                        doorstep</h3>
-                    <p class="text-[#FFF] md:text-xl lg:font-medium text-sm font-normal">We supply highly quality
-                        organic products</p>
-                    <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner4.png');">
+                    <div class="hero-overlay slider-color"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                            <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
+                                your
+                                <br>
+                                doorstep</h3>
+                            <p class="text-[#FFF] md:text-xl lg:font-medium text-lg font-normal">We supply highly
+                                quality
+                                organic products</p>
+                            <button class="btn bg-[#F85559] text-white border-none">Shop Now</button>
+                        </div>
+                    </div>
                 </div>
-
-                <img src="images/banner4.png" class="w-full" />
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a>
                     <a href="#slide1" class="btn btn-circle">❯</a>
                 </div>
             </div>
-
-
+            
         </div>
+        <!-- Carousel / Slider Part Ends-->
+
     </header>
 
     <main>
