Header part done

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner1.png');">
                     <div class="hero-overlay slider-color"></div>
                     <div class="hero-content text-center text-neutral-content">
-                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16 lg:top-36  container mx-auto">
                             <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
                                 your
                                 <br>
@@ -112,8 +112,8 @@
                 </div>
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide4" class="btn btn-circle">❮</a>
-                    <a href="#slide2" class="btn btn-circle">❯</a>
+                    <a href="#slide4" class="btn btn-circle bg-black text-white border-none">❮</a>
+                    <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❯</a>
                 </div>
             </div>
 
@@ -124,7 +124,7 @@
                 <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner2.png');">
                     <div class="hero-overlay slider-color"></div>
                     <div class="hero-content text-center text-neutral-content">
-                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16 lg:top-36  container mx-auto">
                             <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
                                 your
                                 <br>
@@ -138,8 +138,8 @@
                 </div>
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide1" class="btn btn-circle">❮</a>
-                    <a href="#slide3" class="btn btn-circle">❯</a>
+                    <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❮</a>
+                    <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❯</a>
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                 <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner3.png');">
                     <div class="hero-overlay slider-color"></div>
                     <div class="hero-content text-center text-neutral-content">
-                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16 lg:top-36  container mx-auto">
                             <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
                                 your
                                 <br>
@@ -164,8 +164,8 @@
                 </div>
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide2" class="btn btn-circle">❮</a>
-                    <a href="#slide4" class="btn btn-circle">❯</a>
+                    <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❮</a>
+                    <a href="#slide4" class="btn btn-circle bg-black text-white border-none">❯</a>
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                 <div class="hero lg:h-[38rem] h-80" style="background-image: url('images/banner4.png');">
                     <div class="hero-overlay slider-color"></div>
                     <div class="hero-content text-center text-neutral-content">
-                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16  container mx-auto">
+                        <div class="absolute text-center lg:space-y-5 space-y-3 top-16 lg:top-36 container mx-auto">
                             <h3 class="text-[#FFF] lg:text-7xl font-extrabold text-5xl md:text-6xl">Exotic tastes at
                                 your
                                 <br>
@@ -190,14 +190,46 @@
                 </div>
 
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide3" class="btn btn-circle">❮</a>
-                    <a href="#slide1" class="btn btn-circle">❯</a>
+                    <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❮</a>
+                    <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❯</a>
                 </div>
             </div>
-            
-        </div>
-        <!-- Carousel / Slider Part Ends-->
 
+        </div>
+
+        <!-- Fruits Part -->
+        <div class="relative flex justify-center">
+            <div class="lg:flex gap-20 bg-white shadow-lg w-2/3 p-10 rounded-lg hidden absolute -top-36">
+                <div>
+                    <img src="images/fruit1.png" alt="">
+                    <p class="text-xl font-medium text-[rgba(18, 18, 18, 0.80)] text-center">Strawberry</p>
+                </div>
+
+                <div>
+                    <img src="images/fruit2.png" alt="">
+                    <p class="text-xl font-medium text-[rgba(18, 18, 18, 0.80)] text-center">Orange</p>
+                </div>
+
+                <div>
+                    <img src="images/fruit3.png" alt="">
+                    <p class="text-xl font-medium text-[rgba(18, 18, 18, 0.80)] text-center">Mango</p>
+                </div>
+
+                <div>
+                    <img src="images/fruit4.png" alt="">
+                    <p class="text-xl font-medium text-[rgba(18, 18, 18, 0.80)] text-center">Strawberry</p>
+                </div>
+
+                <div>
+                    <img src="images/fruit5.png" alt="">
+                    <p class="text-xl font-medium text-[rgba(18, 18, 18, 0.80)] text-center">Mango</p>
+                </div>
+
+            </div>
+        </div>
+        <!-- Fruits Part -->
+
+        <!-- Carousel / Slider Part Ends-->
     </header>
 
     <main>
